PostgreSQL/postgresql/4-k8s-basic/yaml/admine.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer-deployment
  namespace: postgresql
spec:
  selector:
    matchLabels:
      app: adminer
  replicas: 1
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
      - name: adminer
        image: adminer
        resources:
          requests:
            memory: "64Mi"
            cpu: "200m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: adminer-service
  namespace: postgresql
spec:
  type: NodePort
  selector:
    app: adminer
  ports:
    - port: 8080
      targetPort: 80
      # nodePort: 30001 # Opcional: Kubernetes asignará uno si no se especifica
