PostgreSQL/postgresql/4-k8s-basic/yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adminer-ingress
  namespace: postgresql
spec:
  rules:
  - host: marc.k8s.cluster.gg
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: adminer-service
            port:
              number: 8080
